# slack-notifier

./: .bumpversion.toml  README.md  pyproject.toml
.github/: renovate.json  renovate.json5
.github/labels/: label_definition.yaml  labeler.yaml
.github/workflows/: bump-version.yaml  bump_version.yaml  ci.yaml  create_tag.yaml  generate-labels.yaml  generate_labels.yaml  gh_action_linter.yaml  label_pr.yaml  lint_gh_actions.yaml  lint_python.yaml  python_linter.yml  run_pytest.yaml
examples/: example.py
src/slack_notifier/: __init__.py  slack_notifier.py
tests/: test.py  test_slack_notifier.py
