[project]
name = "slack-notifier"
version = "1.2.1"
description = "A simple Python package for sending Slack notifications"
readme = "README.md"
authors = [
    { name = "Riki Nakamura", email = "riki.nakamura.edu@gmail.com" }
]
requires-python = ">= 3.11"
dependencies = [
    "rich>=13.9.4",
    "slack-sdk>=3.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bump-my-version==0.31.1",
    "ruff==0.9.4",
]

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slack_notifier"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D211", "D213"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S105"]
