[project]
name = "slack-notifier"
version = "1.4.3"
description = "A simple Python package for sending Slack notifications"
readme = "README.md"
authors = [
    { name = "Riki Nakamura", email = "riki.nakamura.edu@gmail.com" }
]
requires-python = ">= 3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "slack-sdk>=3.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "testing" },
]
lint = [ "ruff==0.12.1" ]
testing = [ "pytest==8.4.1", "pytest-cov==6.2.1" ]

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slack_notifier"]

[tool.ruff]
target-version = "py312"
line-length = 128

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D211", "D213"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["INP001", "S105"]
"tests/*" = ["D", "INP001"]
